---------------------------------------------------------------------------------------------------
Version: 0.1.23
Date: ????
  Changes:
    - Added support for prototype categories in bonuses such as __item__ and __entity__
    - Hid quality machines from showing up on bonuses and fuel values
    - Worms and other enemies don't get quality (oops!)
---------------------------------------------------------------------------------------------------
Version: 0.1.22
Date: 2023-12-11
  Changes:
    - Support miners with different number of modules
    - Incompatible with "Shortcuts for 1.1" and "Module Inserter Simplified" due to crashes
---------------------------------------------------------------------------------------------------
Version: 0.1.21
Date: 2023-12-10
  Bug fixes:
    - Fixed compatibility with selector combinator
---------------------------------------------------------------------------------------------------
Version: 0.1.20
Date: 2023-12-07
  Changes:
    - Reorganized data/updates/fixes to be more compatible with other mods
  Bug fixes:
    - Fixed compatibility when tiles forbid quality
---------------------------------------------------------------------------------------------------
Version: 0.1.19
Date: 2023-11-30
  Changes:
    - Miners with quality should not accept speed bonuses
    - Added virtual signals for qualities
    - Added better logging when prototype modification fails
    - Removed quality from item-with-tags
  Bug fixes:
    - Fixed certain lamps failing bonuses
---------------------------------------------------------------------------------------------------
Version: 0.1.18
Date: 2023-11-25
  Changes:
    - Quality enhancing machines now have their module count in their localised names
  Bug fixes:
    - Fixed crash when trying to quality module programming of quality machines
    - Fixed lasers not shooting correctly in extra range