@@ -20,7 +20,7 @@ quality-4=Epic
 quality-5=Legendary
 with-quality=__1__ (__2__)
 quality-module-name=Quality module __1__
-quality-module-description=Drag __CONTROL_LEFT_CLICK__ over machines to insert quality modules.\nDrag __CONTROL_RIGHT_CLICK__ over machines to remove quality modules.\nDrag __CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to insert the minimal amount.
+quality-module-description=Drag __CONTROL_LEFT_CLICK__ over machines to insert quality modules.\nDrag __CONTROL_RIGHT_CLICK__ over machines to remove quality modules.\nDrag __CONTROL_KEY_SHIFT__ + __CONTROL_LEFT_CLICK__ to insert the minimal amount.\n[font=default-semibold][color=255,230,192]Quality: [/color][/font]+__1__%
 with-qm=__1__ with __2__ x __3__
 quality-programming=Programming quality
 quality-deprogramming=Deprogramming quality
